style: fix project spacing for better layout

--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,9 @@ nav {
   margin: 0 auto;;
 }
 
+.project {
+    margin-top: 4rem;
+}
 
 
 
